crates/cribo/tests/snapshots/execution_results@xfail_late_future_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_late_future_imports/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "File \"<stdin>\", line 10\nSyntaxError: from __future__ imports must occur at the beginning of the file",
}
