crates/cribo/tests/snapshots/execution_results@xfail_stickytape_circular_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_circular_reference/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 45, in <module>\n    __cribo_init___cribo_ac4932_first()\n    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^\n  File \"<TMP>/bundled.py\", line 13, in __cribo_init___cribo_ac4932_first\n    second = sys.modules['second']\n             ~~~~~~~~~~~^^^^^^^^^^\nKeyError: 'second'",
}
