crates/cribo/tests/snapshots/execution_results@xfail_stickytape_explicit_relative_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_explicit_relative_import/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 38, in <module>\n  File \"<stdin>\", line 13, in __cribo_init___cribo_bc01a2_greetings_greeting\nImportError: attempted relative import with no known parent package",
}
