crates/cribo/tests/snapshots/execution_results@xfail_stickytape_explicit_relative_import_from_parent_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_explicit_relative_import_from_parent_package/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 38, in <module>\n    greetings.greeting = sys.modules['greetings.greeting']\n    ^^^^^^^^^\nNameError: name 'greetings' is not defined",
}
