crates/cribo/tests/snapshots/execution_results@xfail_stickytape_explicit_relative_import_single_dot_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_explicit_relative_import_single_dot_in_init/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 39, in <module>\n    __cribo_init___cribo_a7defc_greetings()\n    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^\n  File \"<TMP>/bundled.py\", line 13, in __cribo_init___cribo_a7defc_greetings\n    greeting = sys.modules['greetings'].greeting\n               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nAttributeError: module '__cribo_a7defc_greetings' has no attribute 'greeting'",
}
