crates/cribo/tests/snapshots/execution_results@xfail_stickytape_implicit_init_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_implicit_init_import/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 31, in <module>\n    greetings.irrelevant = sys.modules['greetings.irrelevant']\n    ^^^^^^^^^\nNameError: name 'greetings' is not defined",
}
