crates/cribo/tests/snapshots/execution_results@xfail_stickytape_import_from_as_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_import_from_as_module/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 41, in <module>\n    g = sys.modules['greetings'].greeting\n        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nAttributeError: module '__cribo_5ac33d_greetings' has no attribute 'greeting'",
}
